# VisionForge

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  sonar-project.properties
.github/workflows/: cd.yml  ci.yml
configs/: baseline.yaml
src/visionforge/: __main__.py
src/visionforge/blocks/: __init__.py  base.py  classification.py  registry.py
src/visionforge/core/: __init__.py  data.py  evaluator.py  plotter.py  trainer.py
src/visionforge/models/: __init__.py  factory.py
src/visionforge/utils/: config.py  cuda.py  logger.py
tests/: conftest.py  smoke_test.py
tests/blocks/: test_blocks.py  test_classification.py
tests/core/: test_data.py  test_evaluator.py  test_plotter.py  test_trainer.py
tests/models/: test_factory.py
tests/utils/: test_config.py  test_cuda.py  test_logger.py
