[project]
name = "VisionForge"
authors = [{ name = "Marcus Reis", email = "marcusvinicius0083@gmail.com" }]
version = "0.0.1"
description = "VisionForge é um ambiente modular e extensível para experimentação em Visão Computacional, com foco em redes neurais convolucionais (CNNs), pré-processamento de imagens e técnicas clássicas de visão."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

  # Deep Learning
  "torch>=2.3",
    "torchvision>=0.18",
    "gradio>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "onnx>=1.16",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.10",

  "pre-commit>=4.0",

  "types-PyYAML>=6.0",
]

# Scripts will be added once the referenced modules exist:
#   visionforge     = "visionforge.__main__:main"
#   visionforge-gui = "visionforge.gui.app:launch"

[build-system]
requires      = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length    = 88
target-version = ["py313"]

[tool.flake8]
max-line-length = 88
extend-ignore   = ["E203", "E501"]
exclude         = [".venv", "build", "dist", "__pycache__", "outputs"]

[tool.mypy]
python_version         = "3.13"
warn_return_any        = true
ignore_missing_imports = true
exclude                = ["outputs/", "configs/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=src --cov-report=term-missing"


[tool.coverage.run]
source = ["src/visionforge"]
relative_files = true
omit = [
    "src/visionforge/__init__.py",
    "src/visionforge/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]