[project]
name = "VisionForge"
authors = [{ name = "Marcus Reis", email = "marcusvinicius0083@gmail.com" }]
version = "0.0.1"
dynamic = []
description = "VisionForge é um ambiente modular e extensível para experimentação em Visão Computacional, com foco em redes neurais convolucionais (CNNs), pré-processamento de imagens e técnicas clássicas de visão."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [

  # Deep Learning
  "torch>=2.3",
    "torchvision>=0.18",
    "gradio>=4.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "loguru>=0.7",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "onnx>=1.16",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
visionforge = "visionforge.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "codespell>=2.3",
    "pre-commit>=4.0",
    "bump-my-version>=0.24",
    "types-PyYAML>=6.0",
]

# Scripts will be added once the referenced modules exist:
#   visionforge     = "visionforge.__main__:main"
#   visionforge-gui = "visionforge.gui.app:launch"

[build-system]
requires      = ["setuptools>=72"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length    = 88
target-version = "py313"
exclude        = [".venv", "build", "dist", "__pycache__", "outputs"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["visionforge"]

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
skip-magic-trailing-comma = false

[tool.codespell]
skip     = ".venv,*.lock,outputs,htmlcov,*.egg-info"
ignore-words-list = "nd"  # abbreviations used in ML context

[tool.bumpversion]
current_version = "0.0.1"
parse           = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize       = ["{major}.{minor}.{patch}"]
commit          = true
tag             = true
tag_name        = "v{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search   = 'version = "{current_version}"'
replace  = 'version = "{new_version}"'

[tool.mypy]
python_version         = "3.13"
warn_return_any        = true
ignore_missing_imports = true
exclude                = ["outputs/", "configs/", ".venv/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --cov=src --cov-report=term-missing"


[tool.coverage.run]
source = ["src/visionforge"]
relative_files = true
omit = [
    "src/visionforge/__init__.py",
    "src/visionforge/*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]